tests/baselines/reference/propertyAccessNumericLiterals.errors.txt
tests/cases/conformance/expressions/propertyAccess/propertyAccessNumericLiterals.ts(6,1): error TS1085: Octal literals are not available when targeting ECMAScript 5 and higher. Use the syntax '0o0'.


==== tests/cases/conformance/expressions/propertyAccess/propertyAccessNumericLiterals.ts (1 errors) ====
    0xffffffff.toString();
    0o01234.toString();
    0b01101101.toString();
    1234..toString();
    1e0.toString();
    000.toString();
    ~~~
!!! error TS1085: Octal literals are not available when targeting ECMAScript 5 and higher. Use the syntax '0o0'.